syntax = "proto3";
package vultisig.keygen.v1;

import "vultisig/keygen/v1/lib_type_message.proto";

option go_package = "github.com/vultisig/commondata/go/vultisig/keygen/v1;v1";
option java_package = "vultisig.keygen.v1";
option swift_prefix = "VS";

message KeygenMessage {
  string session_id = 1;
  string hex_chain_code = 2;
  string service_name = 3;
  string encryption_key_hex = 4;
  bool use_vultisig_relay = 5;
  string vault_name = 6;
  LibType lib_type = 7; // Default to GG20
}
